# prompt-evaluator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  tauri.conf.json
samples/: array-count.json  top-cities.json
src/: local.rs  main.rs  ui.rs
src/remote/: mod.rs  openai.rs
ui/: .eslintrc.js  index.html  package-lock.json  package.json  vite.config.ts
ui/icons/: icon.icns
ui/src/: App.tsx  store.ts
ui/src/components/: Editor.tsx  Logs.tsx  OpenFile.tsx  Results.tsx  ThemeSwitcher.tsx
