[package]
name = "prompt-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-openai = { version = "0.12.2", optional = true }
bytesize = "1.2.0"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
itertools = "0.11.0"
llm = { git = "https://github.com/rustformers/llm", optional = true, default-features = false, features = [
    "models",
] }
rand = "0.8.5"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.25", features = ["formatting"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tauri = { version = "1.4.0", optional = true, features = ["devtools"] }

[build-dependencies]
tauri-build = { version = "1.4.0", optional = true, features = [] }

[features]
default = ["local", "remote", "ui"]
local = ["llm"]
cublas = ["llm/cublas"]
clblast = ["llm/clblast"]
metal = ["llm/metal"]
remote = ["async-openai"]
ui = ["tauri-build", "tauri"]
custom-protocol = ["tauri/custom-protocol"]
